--- a/angular/src/app/servers/servers.component.html
+++ b/angular/src/app/servers/servers.component.html
@@ -1,5 +1,20 @@
+<label for="">Server Name</label>
+<!-- <input
+  type="text"
+  class="form-control"
+  (input)="onUpdateServerName($event)"> -->
+<input
+  type="text"
+  class="form-control"
+  [(ngModel)]="serverName">
+<br>
+<button 
+  class="btn btn-primary"
+  [disabled]="!allowNewServer"
+  (click)="onCreateServer()">Add Server</button>
 <div>
-  <h3>Servers</h3>
+  <!-- <p>{{ serverCreationStatus }}</p> -->
+  <p *ngIf="serverCreated">Server was created, server name is {{ serverName }}</p>
   <app-server></app-server>
   <app-server></app-server>
 </div>
