--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-  <h1>I'm App component</h1>
+  <h1>App</h1>
   <div class="row">
     <div class="col-xs-12">
         <app-servers></app-servers>
