--- a/angular/src/app/server/server.component.html
+++ b/angular/src/app/server/server.component.html
@@ -1,3 +1,3 @@
-<p>
-  server works!
+<p [ngStyle]="{ backgroundColor: getColor()}">
+    {{ 'Server' }} with ID {{ serverId }} is {{ getServerStatus() }}
 </p>
