--- a/angular/src/app/servers/servers.component.html
+++ b/angular/src/app/servers/servers.component.html
@@ -15,6 +15,5 @@
 <div>
   <!-- <p>{{ serverCreationStatus }}</p> -->
   <p *ngIf="serverCreated">Server was created, server name is {{ serverName }}</p>
-  <app-server></app-server>
-  <app-server></app-server>
+  <app-server *ngFor="let server of servers"></app-server>
 </div>
